# ultraschall-framework

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml
include/ultraschall/: Cover.h  CredentialStore.h  Framework.h  IActivation.h  IConfiguration.h  ICredentialService.h  ICredentialServiceCallback.h  IService.h  IServiceCallback.h  ServiceFactory.h  ServiceManager.h  ServiceStatus.h  SharedObject.h  StringArray.h  StringDictionary.h  Tag.h
src/: Common.h  Cover.cpp  CredentialService.cpp  CredentialService.h  CredentialStore.cpp  CredentialStoreA.cpp  CredentialStoreW.cpp  Framework.cpp  ServiceFactory.cpp  ServiceManager.cpp  Tag.cpp
